index file content added

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,12 +3,49 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
+    <title> Wire frame </title>
     <link rel="stylesheet" href="style.css">
+    
   </head>
+  
   <body>
-    <p>Wire frame branch created</p>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+   
+    <header>
+         <h1>What is Git</h1>
+         <p>Your guide to understanding Git, branches, and why it's essential for developers.</p>
+   </header>
+
+    <section class="def">
+      <article>
+          <h2>What is Git?</h2>
+          <p>Git is a distributed version control system that helps developers track changes in their codebase. It allows multiple people to work on a project without overwriting each other's work.</p>
+          <a href="https://git-scm.com/" target="_blank">Learn more about Git</a>
+      </article>
+    </section>
+
+    <section class="columns">
+        <article>
+           <h2>Why do developers need Git?</h2>
+           <p>Git is essential for collaboration, as it allows developers to work on the same project simultaneously without conflicts. It helps in tracking code changes, managing different versions, and facilitates teamwork.</p>
+           <a href="https://git-scm.com/book/en/v2/Getting-Started-About-Version-Control" target="_blank">Why Git matters</a>
+        </article>
+    
+      <article>
+        <h2>What is a branch in Git?</h2>
+        <p>A branch in Git is a way to isolate work on a particular feature or bug fix. Developers can work in parallel on different branches without affecting the main codebase until the changes are ready to be merged.</p>
+        <a href="https://www.atlassian.com/git/tutorials/using-branches" target="_blank">More about Git branches</a>
+      </article>
+   </section>
+
+<footer>
+  <p>links</p>
+      <a href="https://git-scm.com/" target="_blank">Learn more about Git</a></br>
+      <a href="https://git-scm.com/book/en/v2/Getting-Started-About-Version-Control" target="_blank">Why Git matters</a></br>
+      <a href="https://www.atlassian.com/git/tutorials/using-branches" target="_blank">More about Git branches</a>
+</footer>
+
 </body>
+
 </html>
