filled alt missing in the hero

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no" />
   <link href="//fonts.googleapis.com/css?family=Roboto:400,500,300" rel="stylesheet" type="text/css" />
@@ -22,7 +23,7 @@
   <main>
     <section class="hero">
       <div>
-        <img src="/Wireframe/img/giff.gif" alt="" class="img-hero">
+        <img src="/Wireframe/img/giff.gif" alt="Giff showing how works the git control version" class="img-hero">
       </div>
       <h2>What is Git</h2>
       <p class="overlay">
