add images to the page

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -20,6 +20,7 @@
     <section class="def">
       <article>
           <h2>What is Git?</h2>
+          <img src="https://imgs.search.brave.com/Qqm6bi7uRLCIjhZ9oqLgkMGviLjL9WX4p_40vXgYZ8E/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/ZnJlZWNvZGVjYW1w/Lm9yZy9uZXdzL2Nv/bnRlbnQvaW1hZ2Vz/L3NpemUvdzIwMDAv/MjAyMS8wMy9BcnRi/b2FyZC0yLnBuZw" alt="Git Introduction Image">
           <p>Git is a distributed version control system that helps developers track changes in their codebase. It allows multiple people to work on a project without overwriting each other's work.</p>
           <a href="https://git-scm.com/" target="_blank">Learn more about Git</a>
       </article>
@@ -28,12 +29,14 @@
     <section class="columns">
         <article>
            <h2>Why do developers need Git?</h2>
+           <img src="https://7370416.fs1.hubspotusercontent-na1.net/hub/7370416/hubfs/Imported_Blog_Media/201804_featured-image-GIT-1.jpg?width=1740&height=876&name=201804_featured-image-GIT-1.jpg" alt="Why Git is Important Image">
            <p>Git is essential for collaboration, as it allows developers to work on the same project simultaneously without conflicts. It helps in tracking code changes, managing different versions, and facilitates teamwork.</p>
            <a href="https://git-scm.com/book/en/v2/Getting-Started-About-Version-Control" target="_blank">Why Git matters</a>
         </article>
     
       <article>
         <h2>What is a branch in Git?</h2>
+        <img src="https://imgs.search.brave.com/I5rX0sJn2tuLtg7reCuyL4oKeFK8JE_hONwqERhH288/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbmZv/LnZhcm9uaXMuY29t/L2hzLWZzL2h1YmZz/L0ltcG9ydGVkX0Js/b2dfTWVkaWEvd2hh/dC1pcy1naXQtYnJh/bmNoaW5nLTIucG5n/P3dpZHRoPTEyNDAm/aGVpZ2h0PTU1NCZu/YW1lPXdoYXQtaXMt/Z2l0LWJyYW5jaGlu/Zy0yLnBuZw" alt="Git Branching Image">
         <p>A branch in Git is a way to isolate work on a particular feature or bug fix. Developers can work in parallel on different branches without affecting the main codebase until the changes are ready to be merged.</p>
         <a href="https://www.atlassian.com/git/tutorials/using-branches" target="_blank">More about Git branches</a>
       </article>
