closed html tag/Add html markup

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <header>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+      
+    </footer>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
-</html
+</html>
