--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -13,6 +13,7 @@
         <p>What Is GitHub? And What Is It Used For?</p>
      </header>
 
+     <div class="main-container">
      <main class="intro">
       <h2>What is GitHub</h2>
       <p>GitHub is an online software development platform. It's used for storing, tracking, and collaborating on software projects.</p>
@@ -35,9 +36,12 @@
         <br>
         <p>some feature of oF Git are Tracks history, Free and open source, Supports non-linear development, Creates backups, Scalable, Supports collaboration, Branching is easier, Distributed development</p>
         <p>Learn More about GitHub?...</p>
-        <a href="https://en.wikipedia.org/wiki/GitHub">Read article</a>
+        <a href="https://en.wikipedia.org/wiki/GitHub" target="_blank">
+          <button>Read More</button>
+        </a>
       </summary>
     </section>
+  </div>
 
     <div class="container">
       <section class="section-2">
@@ -63,7 +67,9 @@
             <li>git pull — pull changes from a remote branch to your local branch</li> 
           </ul>
           <p>Learn More about GitHub?...</p>
-          <a href="https://en.wikipedia.org/wiki/GitHub">Read article</a>
+          <a href="https://en.wikipedia.org/wiki/GitHub" target="_blank">
+            <button>Read More</button>
+          </a>
           
         </summary>
       </section>
@@ -74,7 +80,9 @@
           <p>Branch in Git is used to keep your changes until they are ready. You can do your work on a branch while the main branch (master) remains stable. After you are done with your work, you can merge it with the main office.
           Branches allow you to work on different parts of a project without impacting the main branch.</p>
           <p>Learn More about GitHub?...</p>
-          <a href="https://en.wikipedia.org/wiki/GitHub">Read article</a>
+          <a href="https://en.wikipedia.org/wiki/GitHub" target="_blank">
+            <button>Read More</button>
+          </a>
           <img class="img-branch" src="./images/git_branch.jpeg" alt="branch in git">
         </summary>
       </section>
