--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -8,13 +8,16 @@
   </head>
   <body>
     <header>
-
+      <h1>Git and GitHub Introduction</h1>
+      <p>Git is a popular version control system. It was created by Linus Torvalds in 2005, and has been maintained by Junio Hamano since then.</p>
     </header>
     <main>
+      <div></div>
 
+      <div></div>
     </main>
     <footer>
-      
+
     </footer>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
