--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header>
@@ -16,7 +16,7 @@
         
           <!-- First Article -->
           <article>
-            <img src="" >
+            <img src="image/Git-art1.png" alt="Git and GitHub image" >
             <h2>What is Git?</h2>
             <p>Git is a popular version control system. It was created by Linus Torvalds in 2005, and has been maintained by Junio Hamano since then.</p>
 
@@ -25,10 +25,19 @@
                 <li>Tracking who made changes</li>
                 <li>Coding collaboration</li>
             </ul>
+            <button>
+              <a href="https://www.w3schools.com/git/git_intro.asp?remote=github">Read More</a>
+            </button>
           </article>
       
               <!-- Second Article -->
               <article>
+                <img src="image/Git-art2.jpg" alt="Git and GitHub image" >
+            <h2>Why do developers need Git?</h2>
+            <p>One of the biggest advantages of Git is its branching capabilities. Unlike centralized version control systems, Git branches are cheap and easy to merge. This facilitates the feature branch workflow popular with many Git users. Feature branches provide an isolated environment for every change to your codebase.</p>
+            <button>
+              <a href="https://www.w3schools.com/git/git_intro.asp?remote=github">Read More</a>
+            </button>
 
               </article>
 
