--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -26,23 +26,29 @@
                 <li>Coding collaboration</li>
             </ul>
             <button>
-              <a href="https://www.w3schools.com/git/git_intro.asp?remote=github">Read More</a>
+              <a href="https://www.w3schools.com/git/git_intro.asp?remote=github" target="_blank">Read More</a>
             </button>
           </article>
       
               <!-- Second Article -->
               <article>
-                <img src="image/Git-art2.jpg" alt="Git and GitHub image" >
+                <img src="image/Git-art2.jpg" alt="developers need Git" >
             <h2>Why do developers need Git?</h2>
             <p>One of the biggest advantages of Git is its branching capabilities. Unlike centralized version control systems, Git branches are cheap and easy to merge. This facilitates the feature branch workflow popular with many Git users. Feature branches provide an isolated environment for every change to your codebase.</p>
             <button>
-              <a href="https://www.w3schools.com/git/git_intro.asp?remote=github">Read More</a>
+              <a href="https://razorops.com/blog/git" target="_blank">Read More</a>
             </button>
 
               </article>
 
               <!-- Third Article -->
               <article>
+                <img src="image/Git-art3.png" alt="Why Git?" >
+            <h2>What is a branch in Git?</h2>
+            <p>A branch in Git is a separate line of development, allowing developers to work on new features or bug fixes without affecting the main project. It creates an independent environment to test and implement changes. Once the changes are ready, branches can be merged back into the main codebase, helping to isolate and manage different tasks or versions of the project.</p>
+            <button>
+              <a href="https://www.getdbt.com/analytics-engineering/transformation/git-workflow" target="_blank">Read More</a>
+            </button>
 
               </article>
         </section>
