--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -14,47 +14,48 @@
     <main>
       <section class="articles">
         
-          <!-- First Article -->
-          <article>
-            <img src="image/Git-art1.png" alt="Git and GitHub image" >
-            <h2>What is Git?</h2>
-            <p>Git is a popular version control system. It was created by Linus Torvalds in 2005, and has been maintained by Junio Hamano since then.</p>
+        <!-- First Article -->
+        <article>
+          <img src="image/Git-art1.png" alt="Git and GitHub image" >
+          <h2>What is Git?</h2>
+          <p>Git is a popular version control system. It was created by Linus Torvalds in 2005, and has been maintained by Junio Hamano since then.</p>
 
-            <ul>It is used for:
-                <li>Tracking code changes</li>
-                <li>Tracking who made changes</li>
-                <li>Coding collaboration</li>
-            </ul>
-            <button>
+          <ul>It is used for:
+            <li>Tracking code changes</li>
+            <li>Tracking who made changes</li>
+            <li>Coding collaboration</li>
+          </ul>  
+          <button>
               <a href="https://www.w3schools.com/git/git_intro.asp?remote=github" target="_blank">Read More</a>
-            </button>
-          </article>
+          </button>
+        </article>
       
-              <!-- Second Article -->
-              <article>
+        <!-- Second Article -->
+        <article>
                 <img src="image/Git-art2.jpg" alt="developers need Git" >
             <h2>Why do developers need Git?</h2>
             <p>One of the biggest advantages of Git is its branching capabilities. Unlike centralized version control systems, Git branches are cheap and easy to merge. This facilitates the feature branch workflow popular with many Git users. Feature branches provide an isolated environment for every change to your codebase.</p>
             <button>
               <a href="https://razorops.com/blog/git" target="_blank">Read More</a>
             </button>
+        </article>
 
-              </article>
+        <!-- Third Article -->
+        <article>
+          <img src="image/Git-art3.png" alt="Why Git?" >
+          <h2>What is a branch in Git?</h2>
+          <p>A branch in Git is a separate line of development, allowing developers to work on new features or bug fixes without affecting the main project. It creates an independent environment to test and implement changes. Once the changes are ready, branches can be merged back into the main codebase, helping to isolate and manage different tasks or versions of the project.</p>
+          <button>
+            <a href="https://www.getdbt.com/analytics-engineering/transformation/git-workflow" target="_blank">Read More</a>
+          </button>
+        </article>
 
-              <!-- Third Article -->
-              <article>
-                <img src="image/Git-art3.png" alt="Why Git?" >
-            <h2>What is a branch in Git?</h2>
-            <p>A branch in Git is a separate line of development, allowing developers to work on new features or bug fixes without affecting the main project. It creates an independent environment to test and implement changes. Once the changes are ready, branches can be merged back into the main codebase, helping to isolate and manage different tasks or versions of the project.</p>
-            <button>
-              <a href="https://www.getdbt.com/analytics-engineering/transformation/git-workflow" target="_blank">Read More</a>
-            </button>
+      </section>
 
-              </article>
-        </section>
     </main>
-    <footer>
 
+    <footer>
+      <p>Contact us for more information about Git and version control systems.</p>
     </footer>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
