add size and color

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -38,11 +38,40 @@
   <div>
       <label for="color">Color</label>
       <select name="color" id="color">
-        <option id="color" label="Red"></option>
-        <option id="color" label="Green"></option>
-        <option id="color" label="Yellow"></option>
+        <option id="color" label="Red" value="Red"></option>
+        <option id="color" label="Green" value="Green"></option>
+        <option id="color" label="Yellow" value="Yellow"></option>
       </select>
-  </div>    
+  </div>  
+  <div>
+    <label>Size</label>
+  </div>
+  <div>
+    <label for="XS">XS</label>
+    <input type="radio" name="size" id="XS" value="S">
+  </div>  
+<div>
+  <div>
+    <label for="S">S</label>
+    <input type="radio" id="S" name="size" value="s">
+  </div>
+  <div>
+    <label for="M">M</label>
+    <input type="radio" id="M" name="size" value="M">
+  </div>
+  <div>
+    <label for="L">L</label>
+    <input type="radio" id="L" name="size" value="L">
+  </div>
+  <div>
+    <label for="XL">XL</label>
+    <input id="XL" name="size" type="radio" value="XL">
+  </div>
+  <div>
+    <label for="XXL">XXL</label>
+    <input type="radio" id="XXL" name="size" value="XXL">
+  </div>
+</div>
   </fieldset>
   </div>
     <button type="reset">Reset</button>
