set fieldset style in CSS

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -82,7 +82,7 @@
   <footer>
     <!-- change to your name-->
      <h1></h1>
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2>Azar Alampanah</h2>
   </footer>
 </body>
 
