set legend style in CSS

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -15,7 +15,7 @@
   <main>
   <form action="results.html" method="get">
    <fieldset> 
-    <legend>Customer Information</legend>
+    <legend><h2>Customer Information</h2></legend>
     <div class="c-information">
       <label for="name">Name</label>
       <input name="name"  placeholder="User Name" type="text"  pattern="[a-z]{2,}" pattern title="name must be 2 or more letters" id="name" required >
@@ -24,13 +24,9 @@
       <label for="email">Email address</label>
       <input name="Email address" placeholder="Email address"   type="email" id="email" required>
     </div>
-    <div>
-      <label for="number">Number</label>
-      <input type="number" id="number">
-    </div>
-  </fieldset> 
+    </fieldset> 
   <fieldset>
-    <legend>Order information</legend>
+    <legend><h2>Order information</h2></legend>
     <div>
       <label for="Delvery">Delivery Time</label>
       <input name="delivery" id="delivery" type="date" min="2024-10-13" max="2024-11-10" >
