updated footer name

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1>Product Pick</h1>
+    <h1>ZARA STORES</h1>
   </header>
   <main>
   <form>
@@ -21,7 +21,7 @@
   </main>
   <footer>
     <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2>By Karla Grajales</h2>
   </footer>
 </body>
 
