--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>My form exercise</title>
-  <meta name="description" content="">
+  <meta name="description"
+    content="The form collects client details about their purchase, item characteristics, and delivery information, including the address for shipping.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <header>
     <h1>ZARA STORES</h1>
   </header>
   <main>
-  <form>
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
-  </form>
-
+    <div class="container">
+      <form id="form" class="form">
+        <h2>Please choose the size and color of your t-shirt</h2>
+          <div class="form-control">
+            <label for="usermane" class="Username"></label>
+            <input type="text" id="username" placeholder="Enter Username">
+            <small>error message</small>
+          </div>
+      </form>
+    </div>
   </main>
   <footer>
-    <!-- change to your name-->
     <h2>By Karla Grajales</h2>
   </footer>
 </body>
