Added three input fields: Name, Surname, email and password

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -20,10 +20,26 @@
       <form id="form" class="form">
         <h2>Please choose the size and color of your t-shirt</h2>
           <div class="form-control">
-            <label for="usermane" class="Username"></label>
-            <input type="text" id="username" placeholder="Enter Username">
+            <label for="name" class="Name"></label>
+            <input type="text" id="username" placeholder="Enter Name">
             <small>error message</small>
           </div>
+          <div class="form-control">
+            <label for="Surname">Surname</label>
+            <input type="text" id="Surname" placeholder="Enter Surname">
+            <small>error message</small>
+        </div>
+          <div class="form-control">
+            <label for="email" class="email"></label>
+            <input type="text" id="email" placeholder="Enter Email">
+            <small>error message</small>
+          </div>
+          <div class="form-control">
+            <label for="password">password</label>
+            <input type="password" id="password" placeholder="Enter Password">
+            <small>error message</small> 
+        </div>
+        
       </form>
     </div>
   </main>
