--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -19,27 +19,36 @@
     <div class="container">
       <form id="form" class="form">
         <h2>Please choose the size and color of your t-shirt</h2>
-          <div class="form-control">
-            <label for="name" class="Name"></label>
-            <input type="text" id="username" placeholder="Enter Name">
-            <small>error message</small>
-          </div>
-          <div class="form-control">
-            <label for="Surname">Surname</label>
-            <input type="text" id="Surname" placeholder="Enter Surname">
-            <small>error message</small>
+        <div class="form-control">
+          <label for="name" class="Name"></label>
+          <input type="text" id="username" placeholder="Enter Name">
+          <small>error message</small>
         </div>
-          <div class="form-control">
-            <label for="email" class="email"></label>
-            <input type="text" id="email" placeholder="Enter Email">
-            <small>error message</small>
-          </div>
-          <div class="form-control">
-            <label for="password">password</label>
-            <input type="password" id="password" placeholder="Enter Password">
-            <small>error message</small> 
+        <div class="form-control">
+          <label for="Surname">Surname</label>
+          <input type="text" id="Surname" placeholder="Enter Surname">
+          <small>error message</small>
         </div>
-        
+        <div class="form-control">
+          <label for="email" class="email"></label>
+          <input type="text" id="email" placeholder="Enter Email">
+          <small>error message</small>
+        </div>
+        <div class="form-control">
+          <label for="password">password</label>
+          <input type="password" id="password" placeholder="Enter Password">
+          <small>error message</small>
+        </div>
+        <div class="form-size">
+          <input id="small" type="radio" name="size" value="small">
+          <label for="small">Small</label>
+
+          <input id="medium" type="radio" name="size" value="medium">
+          <label for="medium">Medium</label>
+
+          <input id="large" type="radio" name="size" value="Large">
+          <label for="large">Large</label>
+        </div>
       </form>
     </div>
   </main>
