Updated min/max  delivery date

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -61,7 +61,7 @@
       <label for="delivery-date">
         Delivery Date:
       </label>
-        <input id="delivery-date" class="date" type="date" name="delivery" max="2024-10-31" required><br /><br />
+        <input id="delivery-date" class="date" type="date" name="delivery" min="2024-10-14" max="2024-11-12" required><br /><br />
         <button class="btn" type="submit">Submit</button> 
     </fieldset>
   </form>
