Created header footer and header image

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,11 +3,34 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
   </head>
-  <body>
-    <!-- Add your HTML markup here -->
+  <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
-</body>
+  <body>
+    <header id="header-text">
+      <h1>Understanding Git</h1>
+    </header>
+    <main>
+      <img src="/images/GitGradient.jpg" width="100%"
+
+
+
+
+
+
+
+
+
+    </main>
+    
+<footer>
+  <p>This page was created by Natalie Patel</p>
+    <p><a href="mailto:natcandy@gmail.com">Email natcandy@gmail.com</a></p>
+</footer>
+    </body>
 </html
