--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -22,21 +22,21 @@
               <img src="img/githubpic.jpg" alt="Git Image">        
               <h2>What is Git?</h2>
               <p>Git is a distributed version control system that allows multiple people to collaborate on a project efficiently. It helps track changes in the code, supports branching and merging, and makes it easier to revert to earlier versions if necessary. With Git, developers can work independently and then merge their changes without disrupting the workflow of others.</p>
-              <a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F" target="_blank">Read More</a>
+              <p to read more on what is git ?><a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F" target="_blank">Read More on git</a></p>
             </article>
             <!-- Second Article -->
             <article>
               <img src="img/laptop.jpeg" alt="Git Image">
               <h2>Why do developers need Git?</h2>
               <p>Developers need Git to manage code efficiently in both small and large projects. Git enables collaboration, allowing teams to work on different features simultaneously without overwriting each other's work. It also provides tools for tracking changes, resolving conflicts, and maintaining a history of code changes, making the development process smoother and less error-prone.</p>
-              <a href="https://www.atlassian.com/git/tutorials/why-git#:~:text=Git%20is%20all%20about%20efficiency,safe%20environment%20to%20work%20in." target="_blank">Read More</a>
+              <p to read more on git for developers use><a href="https://www.atlassian.com/git/tutorials/why-git#:~:text=Git%20is%20all%20about%20efficiency,safe%20environment%20to%20work%20in." target="_blank">developers tools</a></p>
            </article>
            <!-- Third Article -->
            <article>
             <img src="img/pixel.jpeg" alt="Git Image">
             <h2>What is a branch in Git?</h2>
             <p>A branch in Git is a separate line of development, allowing developers to work on new features or bug fixes without affecting the main project. It creates an independent environment to test and implement changes. Once the changes are ready, branches can be merged back into the main codebase, helping to isolate and manage different tasks or versions of the project.</p>
-            <a href="https://www.w3schools.com/git/git_branch.asp" target="_blank">Read More</a>
+            <p to read more on what is branch in git><a href="https://www.w3schools.com/git/git_branch.asp" target="_blank">branch explanation</a></p>
           </article>
 
         </section>
