Add customer name input field with validation

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -14,14 +14,15 @@
   </header>
   <main>
   <form>
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
+    <!-- Customer Name -->
+    <label for="name" >Customer Name:</label>
+    <input type="text" id="name" name="name" placeholder="Enter your name" pattern="[A-Za-z\s]" required>
   </form>
 
   </main>
   <footer>
-    <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+  
+    <h2>Danial Bashirzadeh</h2>
   </footer>
 </body>
 
