--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -17,6 +17,9 @@
     <!-- Customer Name -->
     <label for="name" >Customer Name:</label>
     <input type="text" id="name" name="name" placeholder="Enter your name" pattern="[A-Za-z\s]" required>
+    <!-- Customer Email -->
+    <label for="email">Email Address:</label>
+    <input type="email" id="email" name="email" placeholder="Enter your Email Address" required>
   </form>
 
   </main>
