--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -20,6 +20,14 @@
     <!-- Customer Email -->
     <label for="email">Email Address:</label>
     <input type="email" id="email" name="email" placeholder="Enter your Email Address" required>
+    <!-- T-Shirt Color -->
+    <label for="color">T-Shirt Color:</label>
+    <select id="color" name="color" required>
+      <option value="">Choose a color</option>
+      <option value="red">Red</option>
+      <option value="blue">Blue</option>
+      <option value="green">Green</option>
+    </select>
   </form>
 
   </main>
