--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -39,6 +39,9 @@
       <option value="XL">XL</option>
       <option value="XXL">XXL</option>
     </select>
+    <!-- Delivery Date -->
+    <label for="date">Preferred Delivery Date:</label>
+    <input type="date" id="date" name="date" required >
   </form>
 
   </main>
