--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -13,14 +13,25 @@
     <h1>Product Pick</h1>
   </header>
   <main>
+    <section>
   <form>
+    <fieldset>
+      <legend>Customer Information</legend>
     <!-- Customer Name -->
+    <div>
     <label for="name" >Customer Name:</label>
     <input type="text" id="name" name="name" placeholder="Enter your name" pattern="[A-Za-z\s]" required>
+    </div>
     <!-- Customer Email -->
+    <div>
     <label for="email">Email Address:</label>
     <input type="email" id="email" name="email" placeholder="Enter your Email Address" required>
+  </div>
+  </fieldset>
+  <fieldset>
+    <legend>Order Details</legend>
     <!-- T-Shirt Color -->
+    <div>
     <label for="color">T-Shirt Color:</label>
     <select id="color" name="color" required>
       <option value="">Choose a color</option>
@@ -28,9 +39,11 @@
       <option value="blue">Blue</option>
       <option value="green">Green</option>
     </select>
+  </div>
     <!-- T-Shirt Size -->
+    <div>
     <label for="size">T-Shirt Size:</label>
-    <select id="size" name="size" required>
+      <select id="size" name="size" required>
       <option value="">Choose a size</option>
       <option value="XS">XS</option>
       <option value="S">S</option>
@@ -39,10 +52,15 @@
       <option value="XL">XL</option>
       <option value="XXL">XXL</option>
     </select>
+  </div>
     <!-- Delivery Date -->
+    <div>
     <label for="date">Preferred Delivery Date:</label>
     <input type="date" id="date" name="date" required >
+  </div>
+  </fieldset>
   </form>
+</section>
 
   </main>
   <footer>
