Add submit button and CSS styles for centering and sizing

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -59,6 +59,10 @@
     <input type="date" id="date" name="date" required >
   </div>
   </fieldset>
+   <!-- Submit Button -->
+  <div>
+    <input type="submit" value="Submit Order">
+  </div>
   </form>
 </section>
 
