--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -60,7 +60,7 @@
   </main>
   <footer>
     <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2>By Amirhossein Aminian</h2>
   </footer>
 </body>
 
