better css and style

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1>Amir T-Shirt Gallery</h1>
+    <h1 class="header">Amir T-Shirt Gallery</h1>
   </header>
   <main>
   <form>
@@ -22,8 +22,8 @@
         <title>T-Shirt Order Form</title>
    
     </head>
-    <body>
-        <h1>Order Your T-Shirt</h1>
+    <body class="form">
+        <h1 class="title">Order Your T-Shirt</h1>
         <form id="tshirtForm">
             <label for="customerName">What is your name?</label>
             <input type="text" id="customerName" placeholder="Enter your name" required minlength="2">
