--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Author: Alireza S.S">
     <title>Wireframe</title>
     <link rel="stylesheet" href="./css/style.css">
   </head>
@@ -17,7 +18,7 @@
       <div class="content">
           <h2>What is Git?</h2>
           <p>Explore the nature of github</p>
-          <button>Read More</button>
+          <button href="#">Read More</button>
       </div>
   </div>
   
@@ -26,13 +27,13 @@
         <img src="./img/1_CWFkh5z8oa6dZfn5_gkKKQ.jpg" alt="Article Image 1">
         <h2>Why do Developers need git?</h2>
         <p>Find out how git can make development better!</p>
-        <button>Read More</button>
+        <button href="#">Read More</button>
     </div>
     <div class="article">
         <img src="./img/f41e4d86f6d0134e519c8fa1a16cfb7ab34cb047-1920x1080.webp" alt="Article Image 2">
         <h2>What is a branch in Git?</h2>
         <p>Learn about the basics of Branch.</p>
-        <button>Read More</button>
+        <button href="#">Read More</button>
       </div>
     </div>
 </div>
