Add footer information, label and input for customer's name

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -14,14 +14,18 @@
   </header>
   <main>
   <form>
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
+  <div class="form_name-block">
+    <label class="label-name" for="customerName">Enter your name</label>
+    <input class="input-name" type="text" id="customerName" name="customerName" placeholder="Enter your name" title="A valid name consists 2-30 characters and only letters." pattern="[A-Za-zÀ-ž\s'-]{2,30}" required>
+  </div>
   </form>
 
   </main>
   <footer>
-    <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    &copy; Copyright - 2024. Created by
+      <a href="https://github.com/nadika-zavodovska" target="_blank" class="copyright_link"
+        aria-label="Open github of author's of website">Nadika</a>
+      with love 🤍
   </footer>
 </body>
 
