--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -18,6 +18,11 @@
     <label class="label-name" for="customerName">Enter your name</label>
     <input class="input-name" type="text" id="customerName" name="customerName" placeholder="Enter your name" title="A valid name consists 2-30 characters and only letters." pattern="[A-Za-zÀ-ž\s'-]{2,30}" required>
   </div>
+
+  <div class="form_email-block">
+    <label for="customerEmail" class="label-email">Enter your email</label>
+    <input type="email" id="customerEmail" name="customerEmail" placeholder="Enter your email" title="Please enter a valid email address (e.g., example@domain.com)." pattern="/^[\w]{1,}[\w.+-]{0,}@[\w-]{2,}([.][a-zA-Z]{2,}|[.][\w-]{2,}[.][a-zA-Z]{2,})$/g" required>
+  </div>
   </form>
 
   </main>
