--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -23,15 +23,13 @@
             name="customerName"
             pattern="[A-Za-zÀ-ž\s'-]{2,30}"
             placeholder="Enter your name"
-            title="A valid name consists of 2-30 characters and only letters."
+            title="A valid name consists of 2-30 characters and only letters." minlength="2"
             required
           />
         </div>
 
         <div class="form_email-block">
-          <label for="customerEmail" class="label-email"
-            >Enter your email</label
-          >
+          <label for="customerEmail" class="label-email">Enter your email</label>
           <input
             type="email"
             id="customerEmail"
@@ -39,29 +37,29 @@
             placeholder="Enter your email"
             title="Please enter a valid email address (e.g., example@domain.com)."
             pattern="/^[\w]{1,}[\w.+-]{0,}@[\w-]{2,}([.][a-zA-Z]{2,}|[.][\w-]{2,}[.][a-zA-Z]{2,})$/g"
-            required
-          />
+            required/>
         </div>
 
         <div class="form_color-block">
           <h3>What color of T-shirt would you like to order?</h3>
           <div>
             <label class="form_label-red" for="redColor">Red</label>
-            <input type="radio" name="productColor" id="redColor" value="redColor" />
+            <input type="radio" name="productColor" id="redColor" value="redColor" required/>
           </div>
           <div>
             <label class="form_label-blue" for="redBLue">Blue</label>
-            <input type="radio" name="productColor" id="redBLue" value="redBLue" />
+            <input type="radio" name="productColor" id="redBLue" value="redBLue" required/>
           </div>
           <div>
             <label class="form_label-green" for="greenColor">Green</label>
-            <input type="radio" name="productColor" id="greenColor" value="greenColor" />
+            <input type="radio" name="productColor" id="greenColor" value="greenColor" required/>
           </div>
         </div>
 
         <div class="form_size-block">
           <label for="productSize">What size of T-shirt would you like to order?</label>
-          <select name="productSize" id="productSize">
+          <select name="productSize" id="productSize" required>
+            <option value="" disabled selected>Select your size</option>
             <option value="XS">XS</option>
             <option value="S">S</option>
             <option value="M">M</option>
@@ -70,6 +68,13 @@
             <option value="M">XXL</option>
           </select>
         </div>
+
+        <div class="form_date-block">
+          <label for="deliveryDate">When do you want the t-shirt to be delivered?</label>
+          <input type="date" id="deliveryDate" name="deliveryDate" min="2024-10-14" max="2024-11-14" required>
+        </div>
+
+
 
         <input type="submit" value="Submit" />
       </form>
