Add reset styles in css

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -74,9 +74,9 @@
           <input type="date" id="deliveryDate" name="deliveryDate" min="2024-10-14" max="2024-11-14" required>
         </div>
 
+        <button type="reset">Reset</button>
 
-
-        <input type="submit" value="Submit" />
+        <button type="submit">Submit</button>
       </form>
     </main>
     <footer>
