--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -12,7 +12,7 @@
       <p>Git is a popular version control system and GitHub is the largest host of source code in the world.</p>
     </header>
     <main>
-      <section class="articles">
+      <section class="article_f">
         
         <!-- First Article -->
         <article>
@@ -29,8 +29,9 @@
               <a href="https://www.w3schools.com/git/git_intro.asp?remote=github" target="_blank">Read More</a>
           </button>
         </article>
-      
+      </section>
         <!-- Second Article -->
+      <section>
         <article>
                 <img src="image/Git-art2.jpg" alt="developers need Git" >
             <h2>Why do developers need Git?</h2>
@@ -39,7 +40,6 @@
               <a href="https://razorops.com/blog/git" target="_blank">Read More</a>
             </button>
         </article>
-
         <!-- Third Article -->
         <article>
           <img src="image/Git-art3.png" alt="Why Git?" >
