--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <header>
+      <div class="logo">Armin Articles</div>
+      <nav>
+          <a href="#home">Home</a>
+          <a href="#about">About</a>
+          <a href="#services">Services</a>
+          <a href="#contact">Contact</a>
+      </nav>
+      <a href="#signup" class="cta">Sign Up</a>
+    </header>
+    <main style="margin-top: 80px;">
+
+    </main>
     <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
-</body>
-</html
+    <!-- Remember: Use semantic HTML
