--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -17,8 +17,92 @@
       </nav>
       <a href="#signup" class="cta">Sign Up</a>
     </header>
-    <main style="margin-top: 80px;">
+    <div class="support-grid"></div>
 
+    <main style="margin-top: 80px;">
+      <div>
+        <div class="band">
+          <div class="item-1">
+                <a href="https://www.entrepreneur.com/science-technology/ignoring-this-website-essential-can-hurt-your-search-ranking/476535" class="card">
+                  <div class ="thumb" style="background-image: url(https://assets.entrepreneur.com/content/3x2/2000/1721245711-ignoring-website-essentials-seacrch-ranking-g-1499534933.jpg?format=pjeg&auto=webp&crop=3:2,smart&width=500&height=334);"></div>
+                  <div class="article">
+                  <article>
+                    <h1>Ignoring This Website Essential Can Hurt Your Search Ranking — and Bring Legal Consequences</h1>
+                  </article>
+                  <article><p>Learn the importance of website accessibility for businesses, highlighting its impact on customer engagement and SEO effectiveness.</p></article>
+                </div>
+                </a>
+          </div>
+          
+          <div class="item-2">
+            <a href="https://www.entrepreneur.com/science-technology/stop-overwhelming-your-online-customers-with-information/470012" class="card">
+              <div class="thumb" style="background-image: url(https://assets.entrepreneur.com/content/3x2/2000/1719500152-overwhelming-online-customers-information-overload-g-1807250018.jpg?format=pjeg&auto=webp&crop=3:2,smart&width=500&height=334);"></div>
+              <article>
+                <h1>Stop Overwhelming Your Online Customers With Information Overload — Hook Them In By Revamping Your Website In This Way.</h1>
+              </article>
+              <article><p>Progressive disclosure is a way to strategically release and relay critical information throughout the customer journey. This is an important consideration when creating or revising a website to create an optimal user experience.</p></article>
+
+            </a>
+          </div>
+            <div class="item-3">
+              <a href="https://www.entrepreneur.com/growing-a-business/how-to-structure-your-website-the-way-google-wants/474846" class="card">
+                <div class="thumb" style="background-image: url(https://assets.entrepreneur.com/content/3x2/2000/1718650366-boost-companys-search-ranking-0624-g1312088979.jpg?format=pjeg&auto=webp&crop=3:2,smart&width=500&height=334);"></div>
+                <div class="article">
+              <article>
+                <h1>Want to Boost Your Company's Search Ranking? Try This Google-Recommended Website Structure</h1>
+              </article>
+              <article><p>Follow these simple steps to increase your search ranking, make users spend more time on your site and make them come back for more in the future.</p></article>
+                </div>
+            </a>
+            </div>
+            <div class="item-4">
+              <a href="https://www.entrepreneur.com/growing-a-business/8-common-seo-myths-debunked/466058" class="card">
+                <div class="thumb" style="background-image: url(https://assets.entrepreneur.com/content/3x2/2000/1715201746-seo-myths-derailing-business-0524-g1582372535.jpg?format=pjeg&auto=webp&crop=3:2,smart&width=500&height=334);"></div>
+                <div class="article">
+              <article>
+                <h1>8 Common SEO Myths That Could Be Derailing Your Business — Drive More Visitors to Your Site By Doing This Instead.</h1>
+              </article>
+              <article><p>Let's unpack the truth behind SEO myths that can lead businesses astray</p></article></p></article>
+
+                </div>
+            </a>
+            </div>
+            <div class="item-5">
+              <a href="https://www.entrepreneur.com/science-technology/host-your-website-with-ibrave-90-for-life-through/471350" class="card">
+                <div class="thumb" style="background-image: url(https://assets.entrepreneur.com/content/3x2/2000/1710795542-ENT-iBraveCloudWebHosting.jpeg?format=pjeg&auto=webp&crop=3:2,smart&width=500&height=334);"></div>
+                <div class="article">
+                  <div class="article">
+              <article>
+                <h1>Host Your Website with iBrave — $90 for Life Through March 24</h1>
+              </article>
+              <article><p>iBrave is an advanced cloud web hosting platform.</p></article>
+                  </div>
+              </div>
+            </a>
+            </div>
+       </div>
+       </div>
+      </div>
     </main>
+    <footer>
+      <div class="footer-content">
+        <div class="footer-logo">Armin Articles</div>
+        <p>&copy; 2024 Armin Articles. All rights reserved.</p>
+        <nav class="footer-nav">
+          <a href="#home">Home</a>
+          <a href="#about">About</a>
+          <a href="#services">Services</a>
+          <a href="#contact">Contact</a>
+        </nav>
+        <div class="socials">
+          <a href="https://www.facebook.com" target="_blank">Facebook</a>
+          <a href="https://www.twitter.com" target="_blank">Twitter</a>
+          <a href="https://www.instagram.com" target="_blank">Instagram</a>
+        </div>
+      </div>
+    </footer>
+    
+  </body>
+
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML
